# Fatulus

./: .gitignore  BaseGfxRenderer.h  BaseRenderer.h  BaseSoundRenderer.h  CMakeLists.txt  Fatalus.sln  Fatalus.vcxproj  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Main.cpp  Main.h  OpenGLLegacyRenderer.cpp  OpenGLLegacyRenderer.h  Player.h  README.md
.github/workflows/: test_and_build.yml
